table with fixed thead and scrollable tbody, just trick via duplicity and visibility

--- a/src/app/shared/modules/table/components/table-base-extended/table-base-extended.component.scss
+++ b/src/app/shared/modules/table/components/table-base-extended/table-base-extended.component.scss
@@ -9,6 +9,9 @@
   .invisible {
     visibility: hidden;
 
+    tr {
+      visibility: collapse;
+    }
     th {
       font-size: 0;
       padding: 0;
